# actors

./: .gitignore  CMakeLists.txt  main.cpp
src/: search.hpp  search_actor.hpp
test/: tests.cpp
